# trade

./: .env.example  .gitignore  launch_ztrade.cmd  pyproject.toml  readme.md
docs/: architecture.md  backtest_dataminer_plan.md  data_feeds.md  exhaust_backtest_model.md  ibkr.md  parallel_dataminer_handoff.md  progress.md  questions.md  roadmap.md  vei_volatility_expansion_index.md  workbench_replay_progress.md
scripts/: smoke.py
src/ztrade/: __init__.py  app.py  cli.py  config.py  env.py  models.py  settings.py
src/ztrade/analysis/: __init__.py  indicators.py
src/ztrade/analytics/: __init__.py  performance.py
src/ztrade/backtest/: __init__.py  engine.py  events.py
src/ztrade/brokers/: __init__.py  base.py  ibkr.py  paper.py  robinhood.py
src/ztrade/data/: __init__.py  factory.py  http.py  ibkr.py  live.py  providers.py
src/ztrade/execution/: __init__.py  engine.py
src/ztrade/recommendations/: __init__.py  engine.py
src/ztrade/risk/: __init__.py  guardrails.py
src/ztrade/storage/: __init__.py  sqlite.py
src/ztrade/strategies/: __init__.py  base.py  expanded.py  helpers.py  news_momentum.py  options_flow_momentum.py  registry.py  relative_volume_breakout.py  rsi_mean_reversion.py  vwap_reclaim.py
src/ztrade/ui/: backtest_workbench.py  desktop.py
tests/: test_env.py  test_ibkr_broker.py  test_ibkr_data.py  test_indicators.py  test_live_adapters.py  test_pipeline.py  test_settings.py
